src/LuckyDraw V1.0/src/objects/SFSSDupeCatcher__Scenario__c.object
<CustomObject>
    <customHelpPage>SFSSDupeCatcher__Filter_Page_Help</customHelpPage>
    <fields>
        <fullName>SFSSDupeCatcher__Blocked_Duplicates__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of of duplicates that have been blocked by this filter through a &quot;Do Not Insert&quot;, &quot;Display Matching Records&quot; or &quot;Do not Update&quot; action.</description>
        <inlineHelpText>The number of of duplicates that have been blocked by this filter through a &quot;Do Not Insert&quot;, &quot;Display Matching Records&quot; or &quot;Do not Update&quot; action.</inlineHelpText>
        <label>Blocked Duplicates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Bypass_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, DupeCatcher will query all of an organization&apos;s lead, contact or account records instead of those visible only to the user entering or updating a record.</description>
        <inlineHelpText>If checked, DupeCatcher checks all records, not just those the user has permissions to view.</inlineHelpText>
        <label>Search All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Converted_Duplicates__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Duplicates that have been converted to a contact or account by this filter</description>
        <inlineHelpText>The number of Duplicates that have been converted to a contact or account by this filter</inlineHelpText>
        <label>Converted Duplicates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Create_Tasks_for_Warnings__c</fullName>
        <description>This field can be used to create tasks whenever a potential duplicate is discovered by the &quot;Report Duplicates&quot; action.</description>
        <inlineHelpText>Indicates whether a task is to be created and who it will be assigned to.</inlineHelpText>
        <label>Create Tasks for Alerts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes - User</fullName>
                </value>
                <value>
                    <fullName>Yes - Filter Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to enable/disable this filter.</description>
        <inlineHelpText>Indicates if a DupeCatcher filter is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Duplicate_Warning_Count__c</fullName>
        <description>The number of Duplicate Alerts that have been generated by this filter.</description>
        <inlineHelpText>The number of alerts generated by the filter.</inlineHelpText>
        <label>Duplicate Alert Count</label>
        <summaryForeignKey>SFSSDupeCatcher__Duplicate_Warning__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Error_Message__c</fullName>
        <defaultValue>&quot;Click on the links below to view or edit the potential duplicate records.&quot;</defaultValue>
        <description>The error message to be displayed to the user when a &quot;Do Not Insert&apos; action is invoked.</description>
        <inlineHelpText>The user-defined error message to display when a duplicate is identified.</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Match_On_Insert_Action__c</fullName>
        <description>This field indicates what DupeBlocker should do when when a user has created a record that it considers to be a potential duplicate.</description>
        <inlineHelpText>The action DupeCatcher takes on identifying a potential duplicate when a new record is inserted.</inlineHelpText>
        <label>Match on Insert Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Insert</fullName>
                </value>
                <value>
                    <fullName>Display Matching Records</fullName>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                    <default>true</default>
                    <label>Do Nothing</label>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Match_On_Update_Action__c</fullName>
        <description>This field indicates what DupeBlocker should do when when a user has modified a record and it considers it to be a potential duplicate.</description>
        <inlineHelpText>The action DupeCatcher takes on identifying a potential duplicate when a new record is updated.</inlineHelpText>
        <label>Match On Update Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Update</fullName>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                    <default>true</default>
                    <label>Do Nothing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Merged_Duplicates__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of duplicates that have been merged using DupeCatcher</description>
        <inlineHelpText>The number of duplicates that have been merged using DupeCatcher</inlineHelpText>
        <label>Merged Duplicates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Person_Account_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Filter is for Person Account matching.</inlineHelpText>
        <label>Person Account Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Potential_Duplicate_Count__c</fullName>
        <description>The number of potential duplicate records that have been generated by DupeCatcher through the &quot;Do Not Insert&quot;, &quot;Do Not Update&quot; and &quot;Display Matching Records&quot; actions.</description>
        <inlineHelpText>The number of potential duplicates that have been identified by this filter.</inlineHelpText>
        <label>Potential Duplicate Count</label>
        <summaryForeignKey>SFSSDupeCatcher__Potential_Duplicate__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Rule_Count__c</fullName>
        <description>The number of scenario rules that are a part of this filter.</description>
        <inlineHelpText>The number of rules that are part of a the filter.</inlineHelpText>
        <label>Filter Rule Count</label>
        <summaryForeignKey>SFSSDupeCatcher__Scenario_Rule__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
        <description>This indicates the type of records that will be used to match on this filter.</description>
        <inlineHelpText>The record types to compare.</inlineHelpText>
        <label>FilterType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account (Person)</fullName>
                </value>
                <value>
                    <fullName>Lead to Account (Person)</fullName>
                </value>
                <value>
                    <fullName>Lead (Person)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DupeCatcher Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Deployed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DupeCatcher Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SFSSDupeCatcher__PersonAccount_Contact_Filtertype</fullName>
        <active>true</active>
        <errorConditionFormula>IF(SFSSDupeCatcher__Person_Account_Filter__c, IF(ISPICKVAL(SFSSDupeCatcher__Scenario_Type__c, &quot;Contact&quot;), true, false), false)</errorConditionFormula>
        <errorMessage>&apos;Contact&apos; is not  a valid Filter Type when the Person Account checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFSSDupeCatcher__PersonAccount_Lead2Contact_Filtertype</fullName>
        <active>true</active>
        <errorConditionFormula>IF(SFSSDupeCatcher__Person_Account_Filter__c, IF(ISPICKVAL(SFSSDupeCatcher__Scenario_Type__c, &quot;Lead to Contact&quot;), true, false), false)</errorConditionFormula>
        <errorMessage>&apos;Lead to Contact&apos; is not a valid Filter Type when the Person Account checkbox is checked.</errorMessage>
    </validationRules>
</CustomObject>